--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-gesture-handler": "^2.4.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -22,6 +28,7 @@
     "@types/jest": "^27.4.1",
     "@types/react": "^18.0.5",
     "@types/react-native": "^0.67.4",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
