--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,8 @@ target 'Movies' do
 
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'TouchID', :path => '../node_modules/react-native-touch-id'
+
   target 'MoviesTests' do
     inherit! :complete
     # Pods for testing
