--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.68.1",
     "react-native-gesture-handler": "^2.4.0",
     "react-native-keychain": "^8.0.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.7.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.2.4",
